# kokoro_batch

./: .gitignore  README.md  demo.py  pipeline.py  pyproject.toml  requirements.txt
kokoro/: __init__.py  istftnet.py  model.py  modules.py
tts_components/: __init__.py  config.py  integrated_g2p.py  utils.py
